add/ added button for password visibility

--- a/html/logIn.html
+++ b/html/logIn.html
@@ -34,6 +34,8 @@
                                 <input class="logInp" id="logEmail" type="email" placeholder="Email or username" required>
                                 <p id="logErr"><img src="../img/alert.webp" class="alertImg">Wrong email or username</p>
                                 <h2 class="logForm">Password</h2>
+                                <div id="hideAndOpen" class="hideEye">
+                                </div>
                                 <input class="logInp" id="logPass" type="password" placeholder="Password" required>
                                 <p id="logErr2"><img src="../img/alert.webp" class="alertImg">Wrong password</p>
                                 <button id="logBtn">Log In</button>
