--- a/html/register.html
+++ b/html/register.html
@@ -52,14 +52,15 @@
     
                                         <div class="forText">
                                             <p class="oneStep">Step 1 of 3 <br> <span class="createPass">Create a password</span></p>
-                                            
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="inps">
+                                    <div id="hideAndOpen" class="hideEye">
+                                    </div>
                                     <form name="pass" style="color: white; font-family: Circular; font-size: 15px;">Password</form>
-                                    <input type="text" id="passRegInp" name="pass">
+                                    <input type="password" id="passRegInp" name="pass">
                                 </div>
 
                                 <div class="passList">
