--- a/html/main.html
+++ b/html/main.html
@@ -130,6 +130,30 @@
                 <span>Grandma`s Smuzi</span>
                 <button class="star"></button>
             </div>
+
+            <div class="playlist" data-src="../audio/Audio9.mp3" data-id="9">
+                <img aria-hidden="false" draggable="false" loading="eager" src="https://i.scdn.co/image/ab67616d00001e02286a0837ff3424065a735e0a" data-testid="cover-art-image" alt="" class="mMx2LUixlnN_Fu45JpFB FqmFsMhuF4D0s35Z62Js Yn2Ei5QZn19gria6LjZj">
+                <span>T.N.T.</span>
+                <button class="star"></button>
+            </div>
+
+            <div class="playlist" data-src="../audio/Audio10.mp3" data-id="10">
+                <img aria-hidden="false" draggable="false" loading="eager" src="https://i.scdn.co/image/ab67616d00001e0265a7b0a6969f0efcde4b5aca" data-testid="cover-art-image" alt="" class="mMx2LUixlnN_Fu45JpFB FqmFsMhuF4D0s35Z62Js Yn2Ei5QZn19gria6LjZj">
+                <span>Rock And Roll All Nite</span>
+                <button class="star"></button>
+            </div>
+
+            <div class="playlist" data-src="../audio/Audio11.mp3" data-id="11">
+                <img aria-hidden="false" draggable="false" loading="eager" src="https://i.scdn.co/image/ab67616d00001e02a46b07c291e6dfdee13b3ee8" data-testid="cover-art-image" alt="" class="mMx2LUixlnN_Fu45JpFB FqmFsMhuF4D0s35Z62Js Yn2Ei5QZn19gria6LjZj">
+                <span>Like That</span>
+                <button class="star"></button>
+            </div>
+
+            <div class="playlist" data-src="../audio/Audio12.mp3" data-id="12">
+                <img aria-hidden="false" draggable="false" loading="eager" src="https://i.scdn.co/image/ab67616d00001e020d5a84e4e47399d2726c330c" data-testid="cover-art-image" alt="" class="mMx2LUixlnN_Fu45JpFB FqmFsMhuF4D0s35Z62Js Yn2Ei5QZn19gria6LjZj">
+                <span>20 Min</span>
+                <button class="star"></button>
+            </div>
         </div>
 
         <div class="for_you" id="ForYou">
@@ -140,10 +164,10 @@
                 <div class="mix_1">
                     <a href="">
                         <div>
-                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://dailymix-images.scdn.co/v2/img/a4e10b79a642e9891383448cbf37d7266a6883d6/1/uk/default" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
+                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://seeded-session-images.scdn.co/v2/img/540/r/artist/2c3PFZtun8HemDbDfRPV6G/en" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
                             <div class="name_mix">
-                                <a href="">Mix day 1</a>
-                                <div class="grup"><a href="">Nirvana, Dominic Fike, Ramones more</a></div>
+                                <a href="">Boombox Radio</a>
+                                <div class="grup"><a href="">Odyn v Kanoe, TNMK, Pianoboy and more</a></div>
                             </div>
                         </div>
                     </a>
@@ -151,10 +175,10 @@
                 <div class="mix_1">
                     <a href="">
                         <div>
-                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://dailymix-images.scdn.co/v2/img/a4e10b79a642e9891383448cbf37d7266a6883d6/1/uk/default" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
+                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://seeded-session-images.scdn.co/v2/img/540/r/artist/6wWVKhxIU2cEi0K81v7HvP/en" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
                             <div class="name_mix">
-                                <a href="">Mix day 1</a>
-                                <div class="grup"><a href="">Nirvana, Dominic Fike, Ramones more</a></div>
+                                <a href="">Rammstein Radio</a>
+                                <div class="grup"><a href="">Lindemann, Marilyn Manson, Till Lindemann and more</a></div>
                             </div>
                         </div>
                     </a>
@@ -162,10 +186,10 @@
                 <div class="mix_1">
                     <a href="">
                         <div>
-                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://dailymix-images.scdn.co/v2/img/a4e10b79a642e9891383448cbf37d7266a6883d6/1/uk/default" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
+                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://seeded-session-images.scdn.co/v2/img/540/r/artist/0lAWpj5szCSwM4rUMHYmrr/en" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
                             <div class="name_mix">
-                                <a href="">Mix day 1</a>
-                                <div class="grup"><a href="">Nirvana, Dominic Fike, Ramones more</a></div>
+                                <a href="">Måneskin Radio</a>
+                                <div class="grup"><a href="">Mother Mother, YUNGBLUD, Mahmood and more</a></div>
                             </div>
                         </div>
                     </a>
@@ -173,10 +197,10 @@
                 <div class="mix_1">
                     <a href="">
                         <div>
-                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://dailymix-images.scdn.co/v2/img/a4e10b79a642e9891383448cbf37d7266a6883d6/1/uk/default" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
+                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://seeded-session-images.scdn.co/v2/img/540/r/artist/5RqIkHQnXRZlm1ozfSS1IO/en" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
                             <div class="name_mix">
-                                <a href="">Mix day 1</a>
-                                <div class="grup"><a href="">Nirvana, Dominic Fike, Ramones more</a></div>
+                                <a href="">Scriabin Radio</a>
+                                <div class="grup"><a href="">DZIDZIO, Druha Rika, Antytila and more</a></div>
                             </div>
                         </div>
                     </a>
@@ -184,10 +208,10 @@
                 <div class="mix_1">
                     <a href="">
                         <div>
-                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://dailymix-images.scdn.co/v2/img/a4e10b79a642e9891383448cbf37d7266a6883d6/1/uk/default" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
+                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://seeded-session-images.scdn.co/v2/img/540/r/artist/1Xyo4u8uXC1ZmMpatF05PJ/en" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
                             <div class="name_mix">
-                                <a href="">Mix day 1</a>
-                                <div class="grup"><a href="">Nirvana, Dominic Fike, Ramones more</a></div>
+                                <a href="">The Weeknd Radio</a>
+                                <div class="grup"><a href="">Neighbourhood, SZA, Lana Del Rey and more</a></div>
                             </div>
                         </div>
                     </a>
@@ -195,10 +219,10 @@
                 <div class="mix_1">
                     <a href="">
                         <div>
-                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://dailymix-images.scdn.co/v2/img/a4e10b79a642e9891383448cbf37d7266a6883d6/1/uk/default" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
+                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://seeded-session-images.scdn.co/v2/img/540/r/artist/0PWfuxCvPtyeCLLWjf4EzJ/en" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
                             <div class="name_mix">
-                                <a href="">Mix day 1</a>
-                                <div class="grup"><a href="">Nirvana, Dominic Fike, Ramones more</a></div>
+                                <a href="">CHEEV Radio</a>
+                                <div class="grup"><a href="">CHURSANOV, Averin, TESLENKO and more</a></div>
                             </div>
                         </div>
                     </a>
@@ -206,10 +230,10 @@
                 <div class="mix_1">
                     <a href="">
                         <div>
-                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://dailymix-images.scdn.co/v2/img/a4e10b79a642e9891383448cbf37d7266a6883d6/1/uk/default" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
+                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://seeded-session-images.scdn.co/v2/img/540/r/artist/6NTzEgUmN1PIBIYEHhf1kS/en" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
                             <div class="name_mix">
-                                <a href="">Mix day 1</a>
-                                <div class="grup"><a href="">Nirvana, Dominic Fike, Ramones more</a></div>
+                                <a href="">Okean Elzy Radio</a>
+                                <div class="grup"><a href="">Boombox, Druha Rika, Odyn v Kanoe and more</a></div>
                             </div>
                         </div>
                     </a>
@@ -217,10 +241,10 @@
                 <div class="mix_1">
                     <a href="">
                         <div>
-                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://dailymix-images.scdn.co/v2/img/a4e10b79a642e9891383448cbf37d7266a6883d6/1/uk/default" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
+                            <img aria-hidden="false" draggable="false" loading="lazy" src="https://seeded-session-images.scdn.co/v2/img/540/r/artist/00FQb4jTyendYWaN8pK0wa/en" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj">
                             <div class="name_mix">
-                                <a href="">Mix day 1</a>
-                                <div class="grup"><a href="">Nirvana, Dominic Fike, Ramones more</a></div>
+                                <a href="">Lana Del Rey Radio</a>
+                                <div class="grup"><a href="">The Neighbourhood, Mitski, Cigarettes After Sex and more</a></div>
                             </div>
                         </div>
                     </a>
